Corrected system monitor layout on small and medium display

--- a/webUI/ressources/css/style.css
+++ b/webUI/ressources/css/style.css
@@ -76,6 +76,8 @@ body {
 
         background-color: #dfefe7;
         width: 100%;
+        
+        z-index: 100;
     }
     
     .navbar-header {
